--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,8 +7,7 @@
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_home"
-            android:title="@string/home"
-            />
+            android:title="@string/home" />
         <item
             android:id="@+id/nav_sites"
             android:icon="@drawable/ic_sites"
@@ -26,8 +25,7 @@
         <item
             android:id="@+id/nav_planYourTrip"
             android:icon="@drawable/ic_plan_your_holiday"
-            android:title="@string/plan_your_trip"
-            />
+            android:title="@string/plan_your_trip" />
 
         <item
             android:id="@+id/nav_weatherNclimate"
