--- a/app/src/main/res/layout/activity_provide_feedback.xml
+++ b/app/src/main/res/layout/activity_provide_feedback.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Type us a feedback and let us support you"
+        android:text="@string/type_us_a_feedback_and_let_us_support_you"
         android:textSize="22sp"
         android:id="@+id/title"
         android:layout_margin="20dp"/>
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:background="@color/colorPrimary"
-            android:text="Send"
+            android:text="@string/send"
             android:layout_marginRight="20dp"
             android:textColor="@color/colorWhite" />
 
@@ -59,7 +59,7 @@
 
             android:layout_marginLeft="20dp"
             android:background="@color/colorPrimary"
-            android:text="Clear"
+            android:text="@string/clear"
             android:textColor="@color/colorWhite" />
     </LinearLayout>
 
