--- a/app/src/main/res/layout/activity_weather_climate.xml
+++ b/app/src/main/res/layout/activity_weather_climate.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enter City or District"
+        android:text="@string/enter_city_or_district"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:text="Search"
+        android:text="@string/search"
         android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
