--- a/app/src/main/res/layout/activity_currency_converter.xml
+++ b/app/src/main/res/layout/activity_currency_converter.xml
@@ -25,7 +25,7 @@
             android:layout_weight="1"
             android:gravity="center_horizontal"
             android:paddingTop="10dp"
-            android:text="Convert"
+            android:text="@string/convert"
             android:textSize="25sp"
             android:textStyle="bold" />
 
@@ -40,7 +40,7 @@
 
             android:paddingTop="10dp"
 
-            android:text="USD      TO      LKR"
+            android:text="@string/usd_to_lkr"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -55,7 +55,7 @@
             android:textColor="@color/colorWhite"
             android:layout_weight="1"
             android:background="@color/colorPrimary"
-            android:text="Convert" />
+            android:text="@string/convert" />
 
 
     </LinearLayout>
@@ -77,7 +77,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="224dp"
-        android:text="LKR 0"
+        android:text="@string/convertPrice"
         android:textSize="30sp"
         android:textStyle="bold" />
 
