--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,7 +14,7 @@
         android:id="@+id/title"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="Welcome to Travel Buddy"
+        android:text="@string/welcome_to_travel_buddy"
         android:textSize="25sp"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
@@ -65,7 +65,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="FEATURED PLACES"
+                    android:text="@string/featured_places"
                     android:textStyle="bold"
                     android:textAlignment="center"
                     android:layout_marginTop="5dp"
@@ -101,7 +101,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="NEARBY PLACES"
+                    android:text="@string/nearby_places"
                     android:textStyle="bold"
                     android:textAlignment="center"
                     android:layout_marginTop="5dp"
@@ -138,7 +138,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="HOTELS"
+                    android:text="@string/hotels"
                     android:textStyle="bold"
                     android:textAlignment="center"
                     android:layout_marginTop="5dp"
@@ -175,7 +175,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="MUSEUMS"
+                    android:text="@string/museums"
                     android:textStyle="bold"
                     android:textAlignment="center"
                     android:layout_marginTop="5dp"
@@ -211,7 +211,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="MOST TRAVELLED"
+                    android:text="@string/most_travelled"
                     android:textStyle="bold"
                     android:textAlignment="center"
                     android:layout_marginTop="5dp"
@@ -248,7 +248,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="BEACHES"
+                    android:text="@string/beaches"
                     android:textStyle="bold"
                     android:textAlignment="center"
                     android:layout_marginTop="5dp"
@@ -284,7 +284,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="RELIGOUS PLACES"
+                        android:text="@string/religous_places"
                         android:textStyle="bold"
                         android:textAlignment="center"
                         android:layout_marginTop="5dp"
@@ -320,7 +320,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="TOURIST EVENTS"
+                        android:text="@string/tourist_events"
                         android:textStyle="bold"
                         android:textAlignment="center"
                         android:layout_marginTop="5dp"
@@ -356,7 +356,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="OTHER APPS"
+                        android:text="@string/other_apps"
                         android:textStyle="bold"
                         android:textAlignment="center"
                         android:layout_marginTop="5dp"
@@ -392,7 +392,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="CONTACT US"
+                        android:text="@string/contact_us_caps"
                         android:textStyle="bold"
                         android:textAlignment="center"
                         android:layout_marginTop="5dp"
@@ -429,7 +429,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="FEEDBACK"
+                        android:text="@string/feedback"
                         android:textStyle="bold"
                         android:textAlignment="center"
                         android:layout_marginTop="5dp"
@@ -465,7 +465,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="TOOLS"
+                        android:text="@string/tools"
                         android:textStyle="bold"
                         android:textAlignment="center"
                         android:layout_marginTop="5dp"
