--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -16,7 +16,7 @@
         android:layout_width="192dp"
         android:layout_height="64dp"
         android:paddingTop="20dp"
-        android:text="Travel Buddy"
+        android:text="@string/travel_buddy"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="30sp" />
 
