--- a/app/src/main/res/drawable/shape.xml
+++ b/app/src/main/res/drawable/shape.xml
@@ -2,7 +2,7 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/colorGrey">
+    <solid android:color="#CD1E1C1C">
 
     </solid>
     <corners
