--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -4,7 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ContactUs" >
+    tools:context=".ContactUs">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="fitStart"
+        android:src="@drawable/con1" />
 
     <TextView
         android:id="@+id/textView"
@@ -12,10 +18,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="66dp"
-        android:text="@string/call_us"
-        android:textSize="20sp" />
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="350dp"
+        android:text="WhatsApp: +94-711 66 0371"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView3"
@@ -24,8 +32,10 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="121dp"
-        android:text="@string/send_email"
-        android:textSize="20sp" />
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="390dp"
+        android:text="Email: travelbuddy@hotmail.com"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 </RelativeLayout>
