--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ContactUs">
+    tools:context=".ContactUs"
+    android:background="#94164EF1" >
 
     <ImageView
         android:layout_width="wrap_content"
