--- a/app/src/main/res/layout/activity_weather_climate.xml
+++ b/app/src/main/res/layout/activity_weather_climate.xml
@@ -12,7 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/enter_city_or_district"
-        android:textSize="15sp"
+        android:textColor="@color/colorWhite"
+        android:textStyle="bold"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,9 +39,9 @@
         android:id="@+id/searchButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="#B2FFFFFF"
         android:text="@string/search"
-        android:textColor="@color/colorWhite"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -50,7 +52,7 @@
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="295dp"
-        android:layout_height="wrap_content"
+        android:layout_height="295dp"
         android:background="@drawable/shape"
         android:gravity="center"
         android:orientation="vertical"
