--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,7 +19,7 @@
         android:textStyle="bold"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
-        android:textColor="@color/colorWhite"/>
+        android:textColor="#1B1919"/>
 
 
     <ScrollView
