--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -61,11 +61,11 @@
                 <ImageView
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:src="@drawable/sigiriya"/>
+                    android:src="@drawable/hp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/featured_places"
+                    android:text="HERITAGE PLACE"
                     android:textStyle="bold"
                     android:textAlignment="center"
                     android:layout_marginTop="5dp"
@@ -96,8 +96,8 @@
 
                 <ImageView
                     android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:src="@drawable/negombobeach"/>
+                    android:layout_height="90dp"
+                    android:src="@drawable/np"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -134,7 +134,7 @@
                 <ImageView
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:src="@drawable/grandeeza"/>
+                    android:src="@drawable/hot"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -171,7 +171,7 @@
                 <ImageView
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:src="@drawable/nationalmuseum"/>
+                    android:src="@drawable/mus"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -207,7 +207,7 @@
                 <ImageView
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:src="@drawable/worldsend"/>
+                    android:src="@drawable/mt"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -244,7 +244,7 @@
                 <ImageView
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:src="@drawable/negombobeach"/>
+                    android:src="@drawable/beach"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -280,7 +280,7 @@
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/daladamaligawa"/>
+                        android:src="@drawable/temp"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -315,7 +315,7 @@
 
                     <ImageView
                         android:layout_width="100dp"
-                        android:layout_height="100dp"
+                        android:layout_height="90dp"
                         android:src="@drawable/specialevetns"/>
                     <TextView
                         android:layout_width="wrap_content"
@@ -350,8 +350,8 @@
                     android:layout_gravity="center_vertical|center_horizontal">
 
                     <ImageView
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
+                        android:layout_width="85dp"
+                        android:layout_height="85dp"
                         android:src="@drawable/otherapps"/>
                     <TextView
                         android:layout_width="wrap_content"
