--- a/app/src/main/res/layout/holidays_listview_layout.xml
+++ b/app/src/main/res/layout/holidays_listview_layout.xml
@@ -14,6 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:textColor="@color/colorWhite"
 
 
             android:paddingLeft="50dp"
@@ -27,6 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:textColor="@color/colorWhite"
 
             android:paddingLeft="50dp"
             android:layout_marginTop="40dp"
