--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -38,6 +38,7 @@
         android:layout_margin="30dp"
             android:paddingBottom="70dp"
         >
+            //abc
 
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
